# GHOST-MCP

./: README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: ghost-doctor.md  ghost-gaps.md  ghost-ingest.md  ghost-minimind.md  ghost-review-pr.md  ghost-run.md  ghost-search.md  ghost-teach.md  ghost-trust.md
ghost_mcp/: __init__.py  __main__.py  compress.py  server.py  tools.py
hooks/: session-start.sh
skills/ghost/: SKILL.md  SKILL.src.md
src/ghost_mcp/: __init__.py  config.py  constants.py  server.py
src/ghost_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ghost_mcp/cli/: __init__.py  colors.py  install.py  serve.py  status.py  wizard.py
tests/: test_cli.py  test_colors.py  test_config.py  test_install.py  test_serve.py  test_server.py  test_status.py  test_wizard.py
tools/: smoke.py
