[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-mcp"
version = "0.1.0"
description = "Ghost Chimera as a Model Context Protocol server — hyper-compressed personal AI proxy for Claude, Codex, and other MCP-compatible platforms."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Fernando Garza" }
]
keywords = ["mcp", "agents", "ghost", "chimera", "personal-ai", "rag", "proxy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
# Zero required dependencies — the wizard and config work with stdlib alone.
dependencies = []

[project.optional-dependencies]
# Full ghost functionality (memory + inference via MCP)
full = [
  "ghostchimera[mcp,minimind]>=0.4.0",
]
# MCP server only (no local model training)
mcp = [
  "mcp>=1.0.0",
  "ghostchimera[mcp]>=0.4.0",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.scripts]
ghost-mcp = "ghost_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["tests"]
